Bug 254869 - Compile fix after https://commits.webkit.org/262479@main
Summary: Compile fix after https://commits.webkit.org/262479@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Per Arne Vollan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-01 10:32 PDT by Per Arne Vollan
Modified: 2023-04-01 13:40 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Arne Vollan 2023-04-01 10:32:50 PDT
Compile fix after https://commits.webkit.org/262479@main
Comment 1 Radar WebKit Bug Importer 2023-04-01 10:33:17 PDT
<rdar://problem/107511773>
Comment 2 Per Arne Vollan 2023-04-01 10:35:22 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12276
Comment 3 EWS 2023-04-01 13:40:47 PDT
Committed 262485@main (957b1310d07a): <https://commits.webkit.org/262485@main>

Reviewed commits have been landed. Closing PR #12276 and removing active labels.