Compile fix after https://commits.webkit.org/262479@main https://bugs.webkit.org/show_bug.cgi?id=254869 rdar://107511773

Unreviewed build fix.

* Source/WebKit/UIProcess/WebPageProxy.cpp:

Canonical link: https://commits.webkit.org/262485@main